--- a/contracts/SlashIndicator.template
+++ b/contracts/SlashIndicator.template
@@ -10,6 +10,8 @@ import "./interface/IParamSubscriber.sol";
 import "./interface/ISystemReward.sol";
 import "./lib/RLPDecode.sol";
 import "./lib/RLPEncode.sol";
+import "./registry/Registry.sol";
+
 
 /// This contract manages slash/jail operations to validators on Core blockchain
 contract SlashIndicator is ISlashIndicator,System,IParamSubscriber{
@@ -60,13 +62,12 @@ contract SlashIndicator is ISlashIndicator,System,IParamSubscriber{
   function getSlashValidators() external view returns (address[] memory) {
     return validators;
   }{% endif %}
-  function init() external onlyNotInit{
+  constructor(Registry registry) System(registry) {
     misdemeanorThreshold = MISDEMEANOR_THRESHOLD;
     felonyThreshold = FELONY_THRESHOLD;
     rewardForReportDoubleSign = INIT_REWARD_FOR_REPORT_DOUBLE_SIGN;
     felonyDeposit = INIT_FELONY_DEPOSIT;
     felonyRound = INIT_FELONY_ROUND;
-    alreadyInit = true;
   }
 
   /*********************** External func ********************************/
@@ -74,7 +75,7 @@ contract SlashIndicator is ISlashIndicator,System,IParamSubscriber{
   /// This method is called by other validators from golang consensus engine.
   /// @param validator The consensus address of validator
   function slash(address validator) external onlyCoinbase onlyInit oncePerBlock onlyZeroGasPrice{
-    if (!IValidatorSet(VALIDATOR_CONTRACT_ADDR).isValidator(validator)) {
+    if (!s_registry.validatorSet().isValidator(validator)) {
       return;
     }
     Indicator memory indicator = indicators[validator];
@@ -88,9 +89,9 @@ contract SlashIndicator is ISlashIndicator,System,IParamSubscriber{
     indicator.height = block.number;
     if (indicator.count % felonyThreshold == 0) {
       indicator.count = 0;
-      IValidatorSet(VALIDATOR_CONTRACT_ADDR).felony(validator, felonyRound, felonyDeposit);
+      s_registry.validatorSet().felony(validator, felonyRound, felonyDeposit);
     } else if (indicator.count % misdemeanorThreshold == 0) {
-      IValidatorSet(VALIDATOR_CONTRACT_ADDR).misdemeanor(validator);
+      s_registry.validatorSet().misdemeanor(validator);
     }
     indicators[validator] = indicator;
     emit validatorSlashed(validator);
@@ -111,9 +112,9 @@ contract SlashIndicator is ISlashIndicator,System,IParamSubscriber{
     require(sigHash1 != sigHash2, "must be two different blocks");
     require(validator1 != address(0x00), "validator is illegal");
     require(validator1 == validator2, "must be the same validator");
-    require(IValidatorSet(VALIDATOR_CONTRACT_ADDR).isValidator(validator1), "not a validator");
-    IValidatorSet(VALIDATOR_CONTRACT_ADDR).felony(validator1, INFINITY_ROUND, felonyDeposit);
-    ISystemReward(SYSTEM_REWARD_ADDR).claimRewards(payable(msg.sender), rewardForReportDoubleSign);
+    require(s_registry.validatorSet().isValidator(validator1), "not a validator");
+    s_registry.validatorSet().felony(validator1, INFINITY_ROUND, felonyDeposit);
+    s_registry.systemReward().claimRewards(payable(msg.sender), rewardForReportDoubleSign);
   }
 
   /// Clean slash record by felonyThreshold/DECREASE_RATE.
