Contract documentation: providing detailed non-developer description of major functions  (#26)
Contract documentation: providing a detailed non-developer description of major functions #26

- This PR aims to increase the visibility of the DAO's non-developers into the smart contract. Such visibility is crucial for aligning the entire org into a single, clear, world-image of what the contracts are actually doing. It should also have a major effect on the depth and quality of our auditing process (both internal and external).

- Most of the work here involved adding function header comments, in some cases I've also added modifiers where I thought they would result in clearer function signatures.

- In creating the internal docs I did my best to catch the key functions and to describe what the code does rather than what it is, Of course, this is the start of this effort and we will probably need several review/improvement cycles before the internal docs will have the impact I believe it could have on the org-wise clarity of how the contracts actually behave.

- I have used @Product and @logic tags to denote, respectively, high-level comments aimed (also) to the DAO's PMs and the function's flow, or logic, descriptor. Feel free to suggest better taggings

--- a/contracts/BtcLightClient.template
+++ b/contracts/BtcLightClient.template
@@ -111,9 +111,17 @@ contract BtcLightClient is ILightClient, System, IParamSubscriber{
     alreadyInit = true;
   }
 
-  /// Store a BTC block in Core blockchain
-  /// @dev This method is called by relayers
-  /// @param blockBytes BTC block bytes
+/* @product Called by a BTC relayer to store a BTC block on the Core blockchain
+   @param blockBytes: BTC block bytes
+   @logic
+      1. Extracts the header bytes from the blockBytes
+      2. Calculates the blockHash from the header bytes
+      3. Check PoW of a relayed BTC block and exit function (but do not revert) if PoW is invalid
+      4. Verify that the block is no older than 5 days ago and revert if that is not the case. The calculation:
+          blockHeight + 720 > getHeight(heaviestBlock)
+      5. Verify MerkleRoot & pickup candidate address, reward address and bindingHash.
+      6. Save & update rewards
+  */
   function storeBlockHeader(bytes calldata blockBytes) external onlyRelayer {
     require(
       tx.gasprice == (storeBlockGasPrice == 0 ? INIT_STORE_BLOCK_GAS_PRICE : storeBlockGasPrice), 
@@ -211,8 +219,15 @@ contract BtcLightClient is ILightClient, System, IParamSubscriber{
     }
   }
 
-  /// Claim relayer rewards
-  /// @param relayerAddr The relayer address
+  /* @product Claim relayer rewards
+     @param relayerAddr: The relayer address
+     @logic Called by relayers to claim their rewards for storing BTC blocks
+      - Reverts if the provided address is not a relayer or if the relayer currently has no reward to claim
+      - Else:  invokes SystemReward's claimRewards() to transfer the reward to the relayer.
+     Note that claimReward() may slash the reward to the current SystemReward balance if the latter is smaller than the reward without reverting the Tx
+     @openissue: This function may be called by any party (not only a relayer) with a relayer address to which the funds will be transferred
+     this might prove problematic for relayers that prefer to choose their own dates of reward reclaiming
+  */
   function claimRelayerReward(address relayerAddr) external onlyInit {
      uint256 reward = relayerRewardVault[relayerAddr];
      require(reward != 0, "no relayer reward");
@@ -257,9 +272,15 @@ contract BtcLightClient is ILightClient, System, IParamSubscriber{
     return callerReward;
   }
 
-  /// Calculate relayer weight based number of BTC blocks relayed
-  /// @param count The number of BTC blocks relayed by a specific validator
-  /// @return The relayer weight
+
+  /* @product Calculate relayer weight based number of BTC blocks relayed
+     @param count: The number of BTC blocks relayed by a specific validator
+     @logic Weight calculation  (maxWeight default value = 20):
+          1. if count <= maxWeight (default: 20) => return count
+          2. else if count in half-open interval (maxWeight, 2*maxWeight] => return maxWeight
+          3. else if count in half-open interval (2*maxWeight, 2.75*maxWeight] => return 3*maxWeight - count
+          4. else return count/4
+   */  
   function calculateRelayerWeight(uint256 count) public view returns(uint256) {
     if (count <= maxWeight) {
       return count;
