--- a/foundry.toml
+++ b/foundry.toml
@@ -10,7 +10,7 @@ solc = "0.8.4"
 
 
 [fuzz]
-runs = 50_000
+runs = 100 # max 50_000
 #max_test_rejects = 65536
 #seed = '0x3e8'
 #dictionary_weight = 40
