--- a/foundry.toml
+++ b/foundry.toml
@@ -1,16 +1,23 @@
 [profile.default]
 src = "contracts"
+test = "tests/foundry"
+script = 'scripts-foundry'
 out = "out"
 libs = ["lib"]
-test = "tests/foundry"
+cache = true
 cache_path = "forge-cache"
+gas_reports = ['*']
+gas_reports_ignore = []
+offline = false
+optimizer = false # @dev in mainnet: true
+optimizer_runs = 200
 no_match_contract = "TestLibMemory"
 #eth-rpc-url = "https://mainnet.infura.io"
 solc = "0.8.4"
 
 
 [fuzz]
-runs = 100 # max 50_000
+runs = 100 # @dev set 50_000 pre major release
 #max_test_rejects = 65536
 #seed = '0x3e8'
 #dictionary_weight = 40
