--- a/foundry.toml
+++ b/foundry.toml
@@ -9,7 +9,7 @@ cache_path = "forge-cache"
 gas_reports = ['*']
 gas_reports_ignore = []
 offline = false
-optimizer = false # @dev in mainnet: true
+optimizer = false # @dev true in mainnet
 optimizer_runs = 200
 no_match_contract = "TestLibMemory"
 #eth-rpc-url = "https://mainnet.infura.io"
@@ -17,7 +17,7 @@ solc = "0.8.4"
 
 
 [fuzz]
-runs = 100 # @dev set 50_000 pre major release
+runs = 50 # @dev test with 50_000 pre major releases
 #max_test_rejects = 65536
 #seed = '0x3e8'
 #dictionary_weight = 40
