--- a/contracts/ValidatorSet.template
+++ b/contracts/ValidatorSet.template
@@ -25,6 +25,8 @@ contract ValidatorSet is IValidatorSet, System, IParamSubscriber {
 
   bytes public constant INIT_VALIDATORSET_BYTES = hex"{{initValidatorSetBytes}}";
 
+  uint256 public constant INIT_VOTE_REWARD_PERCENT = 10;
+
   /*********************** state of the contract **************************/
   uint256 public blockReward;
   uint256 public blockRewardIncentivePercent;
@@ -35,12 +37,16 @@ contract ValidatorSet is IValidatorSet, System, IParamSubscriber {
   // value is the index of the element in `currentValidatorSet`.
   mapping(address => uint256) public currentValidatorSetMap;
 
+  uint256 voteRewardPercent;
+
   struct Validator {
     address operateAddress;
     address consensusAddress;
     address payable feeAddress;
     uint256 commissionThousandths;
     uint256 income;
+    bytes voteAddr;
+    uint256 voteWeight;
   }
 
   /*********************** events **************************/
@@ -50,13 +56,15 @@ contract ValidatorSet is IValidatorSet, System, IParamSubscriber {
     address indexed operateAddress,
     address payable indexed validator,
     uint256 amount,
-    uint256 totalReward
+    uint256 totalReward,
+    uint256 voteReward
   );
   event directTransferFail(
     address indexed operateAddress,
     address payable indexed validator,
     uint256 amount,
-    uint256 totalReward
+    uint256 totalReward,
+    uint256 voteReward
   );
   event deprecatedDeposit(address indexed validator, uint256 amount);
   event validatorDeposit(address indexed validator, uint256 amount);
@@ -76,6 +84,7 @@ contract ValidatorSet is IValidatorSet, System, IParamSubscriber {
     }
     blockReward = BLOCK_REWARD;
     blockRewardIncentivePercent = BLOCK_REWARD_INCENTIVE_PERCENT;
+    voteRewardPercent = INIT_VOTE_REWARD_PERCENT;
     alreadyInit = true;
   }
 
@@ -115,45 +124,67 @@ contract ValidatorSet is IValidatorSet, System, IParamSubscriber {
     }
   }
 
+  function vote(address[] calldata valAddrs) external payable onlyCoinbase onlyInit onlyZeroGasPrice {
+    for (uint256 i; i < valAddrs.length; ++i) {
+      uint256 index = currentValidatorSetMap[valAddrs[i]];
+      if (index > 0) {
+        currentValidatorSet[index - 1].voteWeight += 1;
+      }
+    }
+  }
+
   /// Distribute rewards to validators (and delegators through PledgeAgent)
   /// @dev this method is called by the CandidateHub contract at the beginning of turn round
   /// @dev this is where we deal with reward distribution logics
   function distributeReward() external override onlyCandidate returns (address[] memory operateAddressList) {
     address payable feeAddress;
     uint256 validatorReward;
+    uint256 voteReward;
 
-    uint256 incentiveSum = 0;
+    uint256 incentiveSum;
+    uint256 voteWeightSum;
     uint256 validatorSize = currentValidatorSet.length;
-    for (uint256 i = 0; i < validatorSize; i++) {
+    if (voteRewardPercent == 0) {
+      voteRewardPercent = INIT_VOTE_REWARD_PERCENT;
+    }
+    for (uint256 i; i < validatorSize; i++) {
       Validator storage v = currentValidatorSet[i];
       uint256 incentiveValue = (v.income * blockRewardIncentivePercent) / 100;
       incentiveSum += incentiveValue;
+      voteWeightSum += v.voteWeight;
       v.income -= incentiveValue;
     }
-    ISystemReward(SYSTEM_REWARD_ADDR).receiveRewards{ value: incentiveSum }();
+    uint256 totalVoteReward;
+    if (voteWeightSum != 0) {
+      totalVoteReward = incentiveSum * voteRewardPercent / 100;
+      totalVoteReward -= totalVoteReward % voteWeightSum;
+    }
+    ISystemReward(SYSTEM_REWARD_ADDR).receiveRewards{ value: incentiveSum-totalVoteReward }();
 
     operateAddressList = new address[](validatorSize);
     uint256[] memory rewardList = new uint256[](validatorSize);
-    uint256 rewardSum = 0;
+    uint256 rewardSum;
     uint256 tempIncome;
-    for (uint256 i = 0; i < validatorSize; i++) {
+    for (uint256 i; i < validatorSize; i++) {
       Validator storage v = currentValidatorSet[i];
       operateAddressList[i] = v.operateAddress;
       tempIncome = v.income;
       if (tempIncome != 0) {
         feeAddress = v.feeAddress;
         validatorReward = (tempIncome * v.commissionThousandths) / 1000;
+        voteReward = voteWeightSum == 0 ? 0 : v.voteWeight * totalVoteReward / voteWeightSum;
         if (tempIncome > validatorReward) {
           rewardList[i] = tempIncome - validatorReward;
           rewardSum += rewardList[i];
         }
 
         v.income = 0;
-        bool success = feeAddress.send(validatorReward);
+        v.voteWeight = 0;
+        bool success = feeAddress.send(validatorReward+voteReward);
         if (success) {
-          emit directTransfer(v.operateAddress, feeAddress, validatorReward, tempIncome);
+          emit directTransfer(v.operateAddress, feeAddress, validatorReward, tempIncome, voteReward);
         } else {
-          emit directTransferFail(v.operateAddress, feeAddress, validatorReward, tempIncome);
+          emit directTransferFail(v.operateAddress, feeAddress, validatorReward, tempIncome, voteReward);
         }
       }
     }
@@ -172,10 +203,11 @@ contract ValidatorSet is IValidatorSet, System, IParamSubscriber {
     address[] calldata operateAddrList,
     address[] calldata consensusAddrList,
     address payable[] calldata feeAddrList,
-    uint256[] calldata commissionThousandthsList
+    uint256[] calldata commissionThousandthsList,
+    bytes[] calldata voteAddrList
   ) external override onlyCandidate {
     // do verify.
-    checkValidatorSet(operateAddrList, consensusAddrList, feeAddrList, commissionThousandthsList);
+    checkValidatorSet(operateAddrList, consensusAddrList, feeAddrList, commissionThousandthsList, voteAddrList);
     if (consensusAddrList.length == 0) {
       return;
     }
@@ -192,9 +224,9 @@ contract ValidatorSet is IValidatorSet, System, IParamSubscriber {
 
     for (i = 0; i < currentLength; ++i) {
       if (i >= lastLength) {
-        currentValidatorSet.push(Validator(operateAddrList[i], consensusAddrList[i], feeAddrList[i],commissionThousandthsList[i], 0));
+        currentValidatorSet.push(Validator(operateAddrList[i], consensusAddrList[i], feeAddrList[i],commissionThousandthsList[i], 0, voteAddrList[i], 0));
       } else {
-        currentValidatorSet[i] = Validator(operateAddrList[i], consensusAddrList[i], feeAddrList[i],commissionThousandthsList[i], 0);
+        currentValidatorSet[i] = Validator(operateAddrList[i], consensusAddrList[i], feeAddrList[i],commissionThousandthsList[i], 0, voteAddrList[i], 0);
       }
       currentValidatorSetMap[consensusAddrList[i]] = i + 1;
     }
@@ -211,6 +243,19 @@ contract ValidatorSet is IValidatorSet, System, IParamSubscriber {
       consensusAddrs[i] = currentValidatorSet[i].consensusAddress;
     }
     return consensusAddrs;
+  }
+
+  /// Get list of validators and list of voting addressess in the current round
+  /// @return (List of validator consensus addresses, List of voting addresses)
+  function getValidatorsAndVoteAddresses() external override view returns (address[] memory, bytes[] memory) {
+    uint256 validatorSize = currentValidatorSet.length;
+    address[] memory consensusAddrs = new address[](validatorSize);
+    bytes[] memory voteAddrs = new bytes[](validatorSize);
+    for (uint256 i = 0; i < validatorSize; i++) {
+      consensusAddrs[i] = currentValidatorSet[i].consensusAddress;
+      voteAddrs[i] = currentValidatorSet[i].voteAddr;
+    }
+    return (consensusAddrs, voteAddrs);
   }
 
   /// Get incoming, which is the reward to distribute at the end of the round, of a validator
@@ -307,6 +352,12 @@ contract ValidatorSet is IValidatorSet, System, IParamSubscriber {
         revert OutOfBounds(key, newBlockRewardIncentivePercent, 0, 100);
       }
       blockRewardIncentivePercent = newBlockRewardIncentivePercent;
+    } else if (Memory.compareStrings(key, "voteRewardPercent")) {
+      uint256 newVoteRewardPercent = BytesToTypes.bytesToUint256(32, value);
+      if (newVoteRewardPercent > 100) {
+        revert OutOfBounds(key, newVoteRewardPercent, 0, 100);
+      }
+      voteRewardPercent = newVoteRewardPercent;
     } else {
       require(false, "unknown param");
     }
@@ -318,7 +369,8 @@ contract ValidatorSet is IValidatorSet, System, IParamSubscriber {
     address[] memory operateAddrList,
     address[] memory consensusAddrList,
     address payable[] memory feeAddrList,
-    uint256[] memory commissionThousandthsList
+    uint256[] memory commissionThousandthsList,
+    bytes[] memory voteAddrList
   ) private pure {
     require(
       consensusAddrList.length == operateAddrList.length,
@@ -331,6 +383,10 @@ contract ValidatorSet is IValidatorSet, System, IParamSubscriber {
     require(
       consensusAddrList.length == commissionThousandthsList.length,
       "the numbers of consensusAddresses and commissionThousandthss should be equal"
+    );
+    require(
+      consensusAddrList.length == voteAddrList.length,
+      "the numbers of consensusAddresses and voteAddressed should be equal"
     );
     for (uint256 i = 0; i < consensusAddrList.length; i++) {
       for (uint256 j = 0; j < i; j++) {
