--- a/contracts/GovHub.template
+++ b/contracts/GovHub.template
@@ -110,7 +110,7 @@ contract GovHub is System, IParamSubscriber {
     _;
   }
 
-  function init() external onlyNotInit { //see @INIT_FUNC
+  function init() external onlyNotInit { //see @dev:init
     proposalMaxOperations = PROPOSAL_MAX_OPERATIONS;
     votingPeriod = VOTING_PERIOD;
     executingPeriod = EXECUTING_PERIOD;
@@ -167,7 +167,7 @@ contract GovHub is System, IParamSubscriber {
       );
     }
 
-    uint256 startBlock = block.number + 1;
+    uint256 startBlock = block.number + 1; //@openissue
     uint256 endBlock = startBlock + votingPeriod;
 
     proposalCount++;
@@ -244,20 +244,19 @@ contract GovHub is System, IParamSubscriber {
 
   /// Execute the proposal
   /// @param proposalId The proposal Id
-  function execute(uint256 proposalId) public payable nonReentrant onlyInit onlyIfSuccessfulProposal(proposalId) {
+  function execute(uint256 proposalId) public payable nonReentrant onlyInit onlyIfSuccessfulProposal(proposalId) { //@openissue
     Proposal storage proposal = proposals[proposalId];
     proposal.executed = true;
     uint256 targetSize = proposal.targets.length;
     for (uint256 i = 0; i < targetSize; i++) {
-      address _target = proposal.targets[i];
       bytes memory callData;
       if (bytes(proposal.signatures[i]).length == 0) {
         callData = proposal.calldatas[i];
       } else {
         callData = abi.encodePacked(bytes4(keccak256(bytes(proposal.signatures[i]))), proposal.calldatas[i]);
       }
-
-      (bool success, bytes memory returnData) = _target.call{ value: proposal.values[i] }(callData);
+      address _target = proposal.targets[i];
+      (bool success, bytes memory returnData) = _target.call{ value: proposal.values[i] }(callData); //@dev:unsafe
       require(success, "Transaction execution reverted.");
       emit ExecuteTransaction(_target, proposal.values[i], proposal.signatures[i], proposal.calldatas[i]);
     }
