--- a/contracts/System.template
+++ b/contracts/System.template
@@ -152,7 +152,7 @@ contract System {
            addr == FOUNDATION_ADDR;
   }
 
-  /* @INIT_FUNC: 
+  /* @dev:init
         the init() functions are 'historical' in the sense that they were called one upon platform-contract's 
         initial deployment and will never be called again including not upon updates. If maliciously called, 
         the onlyNotInit() modifier should immediatley revert.
