more open issues

--- a/contracts/BtcLightClient.template
+++ b/contracts/BtcLightClient.template
@@ -228,7 +228,7 @@ contract BtcLightClient is ILightClient, System, IParamSubscriber{
      @openissue: This function may be called by any party (not only a relayer) with a relayer address to which the funds will be transferred
      this might prove problematic for relayers that prefer to choose their own dates of reward reclaiming
   */
-  function claimRelayerReward(address relayerAddr) external onlyInit {
+  function claimRelayerReward(address relayerAddr) external onlyInit { //@openissue
      uint256 reward = relayerRewardVault[relayerAddr];
      require(reward != 0, "no relayer reward");
      relayerRewardVault[relayerAddr] = 0;
@@ -240,7 +240,7 @@ contract BtcLightClient is ILightClient, System, IParamSubscriber{
   /// @dev This method is triggered once per round, the default round value is set to 100 (BTC blocks)
   /// @dev And the weight of each relayer is calculated based on the `calculateRelayerWeight` method
   /// @return The reward for the caller of this method
-  function distributeRelayerReward() internal returns (uint256) {
+  function distributeRelayerReward() internal returns (uint256) { //@openissue
     uint256 totalReward = collectedRewardForHeaderRelayer;
 
     uint256 totalWeight=0;
@@ -281,7 +281,7 @@ contract BtcLightClient is ILightClient, System, IParamSubscriber{
           3. else if count in half-open interval (2*maxWeight, 2.75*maxWeight] => return 3*maxWeight - count
           4. else return count/4
    */  
-  function calculateRelayerWeight(uint256 count) public view returns(uint256) {
+  function calculateRelayerWeight(uint256 count) public view returns(uint256) { //@openissue
     if (count <= maxWeight) {
       return count;
     } else if (maxWeight < count && count <= 2*maxWeight) {
@@ -302,7 +302,7 @@ contract BtcLightClient is ILightClient, System, IParamSubscriber{
       dest := add(add(_output, 0x20), start)
     }
     Memory.copy(src, dest, length);
-    return _output;
+    return _output; //@openissue
   }
 
   function encode(bytes memory headerBytes, address rewardAddr, uint256 scoreBlock,
