--- a/contracts/System.template
+++ b/contracts/System.template
@@ -3,7 +3,7 @@ pragma solidity 0.8.4;
 
 import "./interface/IRelayerHub.sol";
 
-contract System {
+contract System { //@openissue
 
   bool public alreadyInit;
   bool public s_guardIsActive;
