--- a/contracts/SlashIndicator.template
+++ b/contracts/SlashIndicator.template
@@ -122,7 +122,7 @@ contract SlashIndicator is ISlashIndicator,System,IParamSubscriber{
     4. Note2 that nowhere is a check made to verify that the method caller is himself not the 
        'bad' validator
 */
-  function doubleSignSlash(bytes calldata header1, bytes calldata header2) external onlyInit {
+  function doubleSignSlash(bytes calldata header1, bytes calldata header2) external onlyInit { //@openissue
     RLPDecode.RLPItem[] memory items1 = header1.toRLPItem().toList();
     RLPDecode.RLPItem[] memory items2 = header2.toRLPItem().toList();
 
